--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.10.16",
     "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.17.0",
@@ -25,6 +26,8 @@
     "react-google-autocomplete": "^2.7.2",
     "react-google-maps-loader": "^4.3.0",
     "react-icons": "^4.6.0",
+    "react-image-file-resizer": "^0.4.8",
+    "react-image-webp": "^0.8.0",
     "react-js-loader": "^0.1.0",
     "react-lazyload": "^3.2.0",
     "react-loader-spinner": "^5.3.4",
