--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.10.16",
+    "@mui/styles": "^5.11.9",
     "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.17.0",
     "@reduxjs/toolkit": "^1.9.0",
@@ -20,8 +21,11 @@
     "google-map-react": "^2.2.0",
     "jimp": "^0.21.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.0.0",
     "react-color-palette": "^6.2.0",
     "react-content-loader": "^6.2.0",
+    "react-dark-mode-toggle": "^0.2.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.2",
     "react-google-maps-loader": "^4.3.0",
