define hours ago

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui-treasury/components": "^1.10.1",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.10.16",
     "@mui/styles": "^5.11.9",
@@ -13,7 +14,9 @@
     "@react-google-maps/api": "^2.17.0",
     "@reduxjs/toolkit": "^1.9.0",
     "dayjs": "^1.11.7",
+    "emoji-picker-react": "^4.4.7",
     "eslint-config-react-app": "^7.0.1",
+    "fingerprintjs2": "^2.1.4",
     "firebase": "^9.14.0",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
@@ -27,6 +30,7 @@
     "react-icons": "^4.6.0",
     "react-image-file-resizer": "^0.4.8",
     "react-image-webp": "^0.8.0",
+    "react-js-cron": "^3.0.1",
     "react-loader-spinner": "^5.3.4",
     "react-phone-code": "^0.0.4",
     "react-places-autocomplete": "^7.3.0",
