--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@mui/x-date-pickers": "^5.0.19",
     "@react-google-maps/api": "^2.17.0",
     "@reduxjs/toolkit": "^1.9.0",
+    "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "emoji-picker-react": "^4.4.7",
     "eslint-config-react-app": "^7.0.1",
     "fingerprintjs2": "^2.1.4",
     "firebase": "^9.14.0",
     "moment": "^2.29.4",
+    "openai": "^3.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
