--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
     "emoji-picker-react": "^4.4.7",
     "eslint-config-react-app": "^7.0.1",
     "fingerprintjs2": "^2.1.4",
@@ -40,6 +41,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "react-select": "^5.6.1",
+    "react-toggle-dark-mode": "^1.1.1",
     "react-world-flags": "^1.5.1",
     "styled-components": "^5.3.6",
     "uuid": "^9.0.0"
