--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "proxy": "https://beautyverse.herokuapp.com/",
   "name": "beautyverse",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +14,7 @@
     "@react-google-maps/api": "^2.17.0",
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.3.4",
+    "bson": "^5.1.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "emoji-picker-react": "^4.4.7",
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
     "react-google-maps-loader": "^4.3.0",
+    "react-headroom": "^3.2.1",
     "react-icons": "^4.6.0",
     "react-image-file-resizer": "^0.4.8",
     "react-image-webp": "^0.8.0",
@@ -48,6 +49,7 @@
     "react-world-flags": "^1.5.1",
     "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.6",
+    "timeago.js": "^4.0.2",
     "uuid": "^9.0.0"
   },
   "scripts": {
