--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-react-app": "^7.0.1",
     "fingerprintjs2": "^2.1.4",
     "firebase": "^9.14.0",
+    "helmet": "^6.0.1",
     "moment": "^2.29.4",
     "openai": "^3.1.0",
     "path-browserify": "^1.0.1",
@@ -34,12 +35,15 @@
     "react-google-charts": "^4.0.0",
     "react-google-maps-loader": "^4.3.0",
     "react-headroom": "^3.2.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.6.0",
     "react-image-file-resizer": "^0.4.8",
     "react-image-webp": "^0.8.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-js-cron": "^3.0.1",
     "react-loader-spinner": "^5.3.4",
     "react-phone-code": "^0.0.4",
+    "react-phone-input-2": "^2.15.1",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
