--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.3.4",
     "bson": "^5.1.0",
+    "caniuse-lite": "^1.0.30001525",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "emoji-picker-react": "^4.4.7",
