--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@mui/material": "^5.14.14",
     "@mui/styles": "^5.11.9",
     "@mui/x-data-grid": "^5.17.24",
-    "@mui/x-date-pickers": "^5.0.19",
+    "@mui/x-date-pickers": "^6.17.0",
     "@react-google-maps/api": "^2.17.0",
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.5.1",
     "browser-image-resizer": "^2.4.1",
     "bson": "^5.1.0",
     "caniuse-lite": "^1.0.30001525",
-    "dayjs": "^1.11.7",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.0.3",
     "draft-js": "^0.11.7",
     "draft-js-emoji-plugin": "^2.1.3",
